# xray-16

./: .travis.yml  README.md
src/: CMakeLists.txt
src/Common/: PlatformLinux.inl  object_cloner.h  object_comparer.h  object_destroyer.h  object_loader.h  object_saver.h  object_type_traits.h
src/Layers/xrRender/: light.h  r__dsgraph_render.cpp
src/Layers/xrRenderPC_R1/: GlowManager.h
src/Layers/xrRenderPC_R2/: r2_R_render.cpp
src/Layers/xrRenderPC_R3/: r2_R_calculate.cpp  r3_R_render.cpp
src/Layers/xrRenderPC_R4/: r4_R_render.cpp
src/utils/: CMakeLists.txt
src/utils/ctool/: CMakeLists.txt  PPMT_SA.hpp  PPMTrain.cpp  ctool.cpp
src/utils/mp_balancer/: CMakeLists.txt  iostreams_proxy.h  pch.h  xr_ini_ex.cpp
src/utils/mp_configs_verifyer/: CMakeLists.txt  configs_dump_verifyer.cpp  entry_point.cpp  pch.h
src/utils/mp_gpprof_server/: CMakeLists.txt
src/utils/mp_gpprof_server/libraries/gamespy/common/: gsPlatform.h  gsPlatformUtil.h
src/utils/mp_screenshots_info/: CMakeLists.txt  entry_point.cpp  screenshots_writer.cpp
src/utils/xrCompress/: CMakeLists.txt  main.cpp  xrCompress.cpp  xrCompress.h
src/xrCDB/: Frustum.h  ISpatial.h  xr_area.h  xr_area_raypick.cpp  xr_collide_defs.h
src/xrCore/: CMakeLists.txt  FS.cpp  FS_internal.h  FTimer.cpp  FTimer.h  FileSystem.cpp  FileSystem.h  LocatorAPI.cpp  LocatorAPI.h  LocatorAPI_defs.cpp  LzHuf.cpp  NET_utils.cpp  PPMdType.h  Platform.h  Stream_Reader.h  Xr_ini.cpp  _flags.h  _math.cpp  _std_extensions.cpp  _std_extensions.h  _stl_extensions.h  _types.h  buffer_vector.h  clsid.cpp  cpuid.cpp  doug_lea_allocator.cpp  file_stream_reader.cpp  file_stream_reader.h  intrusive_ptr.h  log.cpp  log.h  lzhuf.h  memory_allocation_stats.cpp  memory_usage.cpp  os_clipboard.cpp  ppmd_compressor.cpp  rt_compressor.cpp  rt_compressor9.cpp  stream_reader.cpp  stream_reader.h  (+19 more)
src/xrCore/Animation/: Motion.cpp  SkeletonMotions.cpp
src/xrCore/IO/: DirectoryLookup.hpp  DirectoryLookup_posix.cpp
src/xrCore/Math/: MathUtil.cpp  PLC_SSE.cpp  Skin4W_MT.hpp  SkinXW_SSE.hpp
src/xrCore/PostProcess/: PostProcess.cpp
src/xrCore/Threading/: Event.cpp  Lock.cpp  Lock.hpp  ttapi.cpp
src/xrCore/blackbox/: CrashHandler.cpp
src/xrCore/crypto/: xr_dsa.cpp
src/xrEngine/: CMakeLists.txt  CameraManager.cpp  Engine.h  Environment_misc.cpp  EventAPI.cpp  Feel_Vision.cpp  ICollidable.cpp  IGame_Level.cpp  IGame_Level.h  IGame_Persistent.cpp  IRenderable.cpp  PS_instance.cpp  PS_instance.h  Render.h  device.cpp  device.h  engine_impl.cpp  pure_relcase.h  stdafx.h  x_ray.cpp  xrLoadSurface.cpp  xrSASH.h  xrTheora_Stream.cpp  xrTheora_Surface.cpp  xr_ioc_cmd.h  xr_object.cpp  xr_object.h  xr_object_list.cpp  xr_object_list.h
src/xrGame/: AI_PhraseDialogManager.cpp  Actor.cpp  Actor.h  ActorAnimation.cpp  ActorCameras.cpp  ActorCondition.cpp  ActorInput.cpp  ActorVehicle.cpp  Actor_Events.cpp  Actor_Feel.cpp  Actor_Movement.cpp  Actor_Network.cpp  Actor_Weapon.cpp  Artefact.cpp  BastArtifact.h  BlackGraviArtifact.cpp  BlackGraviArtifact.h  Bolt.h  BreakableObject.h  CameraEffector.h  Car.cpp  Car.h  CarCameras.cpp  CarDamageParticles.cpp  CarDoors.cpp  CarExhaust.cpp  CarInput.cpp  CarLights.cpp  CarSound.cpp  CarWheels.cpp  CharacterPhysicsSupport.cpp  ClimableObject.h  ContextMenu.cpp  CustomDetector.cpp  CustomDetector.h  CustomMonster.cpp  CustomMonster.h  CustomZone.cpp  CustomZone.h  DBG_Car.cpp  (+196 more)
src/xrGame/ai/crow/: ai_crow.cpp
src/xrGame/ai/monsters/: psy_aura.h
src/xrGame/ai/monsters/basemonster/: base_monster.cpp  base_monster_debug.cpp  base_monster_net.cpp  base_monster_startup.cpp
src/xrGame/ai/monsters/controller/: controller_psy_hit_effector.h
src/xrGame/ai/monsters/pseudodog/: psy_dog.cpp
src/xrGame/ai/monsters/rats/: ai_rat.cpp
src/xrGame/ai/monsters/states/: monster_state_smart_terrain_task_inline.h
src/xrGame/ai/phantom/: phantom.cpp
src/xrGame/ai/stalker/: ai_stalker.cpp
src/xrGame/ai/trader/: ai_trader.cpp
src/xrGame/ui/: Restrictions.cpp  ServerList.cpp  UIChangeMap.cpp  UIEditKeyBind.cpp  UIFrameLine.cpp  UIGameTutorial.cpp  UIKickPlayer.cpp  UIMPAdminMenu.cpp  UIMPChangeMapAdm.cpp  UIMPPlayersAdm.cpp  UIMPServerAdm.cpp  UIMainIngameWnd.h  UIMapList.cpp  UIOptConCom.cpp  UIOptionsItem.cpp  UIOptionsManager.cpp  UITextVote.cpp  UIVote.cpp  UIVotingCategory.cpp
src/xrNetServer/: NET_Client.cpp  NET_Server.cpp
src/xrPhysics/: ActorCameraCollision.cpp  IActivationShape.cpp  IPHStaticGeomShell.h  IPHWorld.h  MovementBoxDynamicActivate.cpp  PHCapture.cpp  PHCapture.h  PHCaptureInit.cpp  PHCharacter.cpp  PHObject.h  PHShellActivate.cpp  PHShellSplitter.h  PHSimpleCharacter.cpp  PHStaticGeomShell.h  PHWorld.h  PhysicsCommon.h  PhysicsExternalCommon.cpp  PhysicsShell.cpp  collisiondamagereceiver.cpp  phvalide.cpp
src/xrScriptEngine/: xrScriptEngine.hpp
src/xrServerEntities/: PHNetState.cpp  PropertiesListTypes.h  alife_monster_brain.h  character_info.cpp  object_factory_register.cpp  script_ini_file.cpp  smart_cast.cpp  xml_str_id_loader.h  xrServer_Objects.h  xrServer_Objects_ALife.cpp  xrServer_Objects_ALife_Items.h  xrServer_Objects_Abstract.h
